--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "laravel-elixir-ngHtml2Js",
+  "name": "laravel-elixir-ng-html2js",
   "version": "0.1.0",
   "description": "Laravel Elixir ngHtml2Js Extension",
   "main": "index.js",
@@ -12,13 +12,15 @@
     "ngHtml2Js",
     "gulp"
   ],
-  "author": {
-    "name": "Arnis Lielturks <arnis.lielturks@gmail.com>"
-  },
+  "author": "Martins Sipenko <martins.sipenko@gmail.com>",
+  "contributors": [
+      "Arnis Lielturks <arnis.lielturks@gmail.com>"
+  ],
   "license": "MIT",
   "dependencies": {
     "gulp-concat": "^2.4.3",
-    "gulp-ng-html2js": "^0.1.8"
+    "gulp-ng-html2js": "^0.1.8",
+    "underscore": "^1.7.0"
   },
   "devDependencies": {},
   "repository": {
