--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   ],
   "author": "Martins Sipenko <martins.sipenko@gmail.com>",
   "contributors": [
-      "Arnis Lielturks <arnis.lielturks@gmail.com>"
+    "Arnis Lielturks <arnis.lielturks@gmail.com>"
   ],
   "license": "MIT",
   "dependencies": {
-    "gulp-concat": "^2.4.3",
-    "gulp-ng-html2js": "^0.1.8",
-    "underscore": "^1.7.0"
+    "gulp-concat": "^2.5.2",
+    "gulp-ng-html2js": "^0.2.0",
+    "underscore": "^1.8.3",
+    "gulp-uglify": "^1.2.0",
+    "gulp-if": "^1.2.5"
   },
   "devDependencies": {},
   "repository": {
